[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Magdalena Niescior <magda.niescior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
pydantic = "^2.1.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
