[tool.poetry]
name = "nutritions-api"
version = "0.1.0"
description = ""
authors = ["Magdalena Niescior <magda.niescior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103"
pydantic = "^2"
sqlalchemy = "^2"
alembic = "^1"
uvicorn = "^0.23"
pydantic-settings = "^2"
psycopg = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
